# ai-ordering-system

./: .env  .gitignore  ASR_TTS_GUIDE.md  ASR_TTS_QUICK_START.txt  LLM_USAGE_GUIDE.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.txt  README.md  debug_output.txt  llm_config_example.py  project_structure.txt  pyproject.toml
.claude/: settings.local.json
.gemini/: .env  system.md
.github/workflows/: tests.yml
prompts/: few_shot_examples.md  system_prompt.md
scripts/: manual_chat_test.py
src/: main.py  main.py.bak  run_dm_cli.py  voice_ordering_cli.py
src/agents/: menu_agent.py  order_agent.py
src/api/: app.py
src/config/: addon_prices.json  alias_loader.py  combo_aliases.json  combo_aliases.md  combo_rules.json  config_loader.py
src/dm/: clarify_policy.py  dialogue_manager.py  llm_clarifier.py  llm_conversation_processor.py  llm_router.py  session_context.py  (+4 more)
tests/: test_asr_tts_integration.py  test_carrier_integration.py  test_checkout_submit.py  test_combo_aliases_config.py  test_combo_drink_swap.py  test_combo_drink_swap_price_driven.py  test_combo_integration.py  test_combo_matrix.py  test_combo_security.py  test_dialogue_manager_bdd.py  test_drink_integration.py  test_egg_pancake_integration.py  test_jam_toast_integration.py  test_llm_clarifier.py  test_llm_integration.py  test_llm_router.py  test_lmstudio.py  test_multi_item_pending_queue.py  test_order_editing_cancel_remove_clear.py  test_order_persistence_and_query_api.py  test_order_router_bdd.py  test_riceball_tool_bdd.py  test_router_dm_contract.py  test_security_bdd.py  test_snack_integration.py
(+31 files in other folders)
